11/18/2015  Matthieu Hautreux <matthieu.hautreux@cea.fr>

	* auks-0.4.4-3
	* auksd/auksdrenewer: add foreground mode using -F flag
	* systemd: now use 'simple' systemd type using the foreground
	  mode and collectl logs on stderr (managed using journalctl)
	* specfile: correct a regression preventing from putting
	  initscripts in the right directory

10/19/2015  Matthieu Hautreux <matthieu.hautreux@cea.fr>

	* auks-0.4.3-3
	* integrate Systemd init scripts for auks components

03/27/2015  Matthieu Hautreux <matthieu.hautreux@cea.fr>

	* auks-0.4.3
	* configure: fix for automake 1.12 (CentOS-7.x)
	* initscripts: remove unused pidfiles in headers (CentOS-7.x)

01/26/2015 Matthieu Hautreux <matthieu.hautreux@cea.fr>

	* auks-0.4.2
	* init scripts : change order to be launched after NTP on RHEL-6.x
	* slurm/spank: ensure that the renewer launched using spank is working
	  in / and waited for at the end of the step.
	* cleaner: correct a bug resulting in non renewable tickets removal
	  at each cleaning stage in auksd.

	* auks-0.4.1(-x)
	* aukspriv: add kinit timeout logic
	* auks: automatically inhibate auks support when no ccache available
	* auks SLURM Spank plugin: add hostcredcache= conf pragma to specify
	  a particular credential cache for the slurmd actions (based on a
	  patch from Nacho Barrientos, CERN)
	* code cleaning for cppcheck usage
	* auks SLURM Spank plugin: add sync=mode conf pragma (cf man auks.so)
	* libauksapi: correct a bug in uid management greater than 999999999

10/07/2010 Matthieu Hautreux <matthieu.hautreux@cea.fr>

	* auks-0.4.0-1
	* correct client/server connection timeout
	* improve init service internals to prevent possible daemon hangup
	* add minimum uid configuration param to auks slurm spank plugin
	* remove memory leak workaround required by MIT kerberos version
	  prior to 1.8 (use -DLIBKRB5_MEMORY_LEAK_WORKAROUND to activate
	  this workaround)

01/28/2010 Matthieu Hautreux <matthieu.hautreux@cea.fr>
